// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceStateChip should match snapshot with deployment status 1`] = `
<div>
  <div
    class=""
    data-state="closed"
  >
    <div
      class="text-brand-500"
    >
      <div
        class="relative"
      >
        <svg
          class="animate-spin"
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 0A12 12 0 111.28 6.607l2.006 1.01A9.755 9.755 0 1012 2.244V0z"
            fill="currentColor"
          />
        </svg>
        <div
          class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
        >
          <svg
            fill="none"
            height="100%"
            viewBox="0 0 14 14"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.48333 1.18209L4.27778 1.91116L6.61111 3.0855V4.25984L9.33333 6.99997L9.91667 6.4128L10.5 6.99997L9.91667 7.58714L11.0833 8.76149L14 5.82563L12.8333 4.65129L12.25 5.23846L11.6667 4.65129L12.25 4.06412L9.8559 1.65427C9.27257 1.0671 8.48021 0.736816 7.65625 0.736816H7.08507C6.52118 0.736816 5.96701 0.890949 5.48333 1.18209ZM0 10.9144L2.33333 13.2631L8.03785 6.80425L6.41667 5.1724L0 10.9144Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceStateChip should match snapshot with running status 1`] = `
<div>
  <div
    class=""
    data-state="closed"
  >
    <div
      class="text-brand-500"
    >
      <div
        class="relative"
      >
        <svg
          class="animate-spin"
          fill="none"
          height="16"
          viewBox="0 0 24 24"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 0A12 12 0 111.28 6.607l2.006 1.01A9.755 9.755 0 1012 2.244V0z"
            fill="currentColor"
          />
        </svg>
        <div
          class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2"
        >
          <svg
            class="relative left-[1px] mx-auto"
            fill="none"
            height="70%"
            viewBox="0 0 8 10"
            width="70%"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 5l-8 5V0l8 5z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;
